// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> with <Field.Autocomplete /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="autocomplete"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <div
      className="sc-bqiRlB jUdxlI k-Form-Autocomplete"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="both"
        aria-expanded={null}
        aria-owns="field-results"
        autoComplete="off"
        className="k-Form-Autocomplete__input"
        id="autocomplete"
        name="field"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Select…"
        role="combobox"
        size="medium"
        type="text"
      />
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> in error matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-TextInput--medium k-Form-TextInput--error"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
  <p
    className="k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular k-Field__error k-u-margin-none k-u-margin-top-single"
  >
    Error!
  </p>,
]
`;

exports[`<Field /> with <Field.Input /> in help matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-TextInput--medium"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
  <p
    className="k-u-line-height-normal k-u-size-micro k-u-weight-light k-Field__help k-u-margin-none k-u-margin-top-single"
    style={
      Object {
        "color": "var(--color-grey-700)",
      }
    }
  >
    Help!
  </p>,
]
`;

exports[`<Field /> with <Field.Input /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-TextInput--medium"
      disabled={false}
      id="input"
      name="field"
      placeholder="Placeholder…"
    />
  </div>,
]
`;

exports[`<Field /> with <Field.Input limit /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <div
      className="sc-gKclnd iZxmye k-Form-TextInputWithLimit"
    >
      <input
        className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-TextInputWithLimit__input k-Form-TextInput--medium"
        defaultValue=""
        disabled={false}
        id="input"
        name="field"
        onChange={[Function]}
        placeholder="Placeholder…"
      />
      <div
        className="k-Form-TextInputWithLimit__limitNumber"
      >
        80
      </div>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input unit /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <div
      className="sc-iCfMLu dsUhOH k-Form-TextInputWithUnit"
    >
      <input
        className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--medium"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="number"
      />
      <span
        className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--medium"
      >
        €
      </span>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> in error matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <div
      className="sc-crHmcD lfvliB k-Form-PasswordInput"
    >
      <input
        className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-PasswordInput__input k-Form-TextInput--medium k-Form-TextInput--error"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <button
        aria-label="Show password"
        aria-pressed={false}
        className="k-Form-PasswordInput__icon k-u-reset-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </button>
    </div>
  </div>,
  <p
    className="k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-regular k-Field__error k-u-margin-none k-u-margin-top-single"
  >
    Error!
  </p>,
]
`;

exports[`<Field /> with <Field.Password /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkPtRN ymLMO k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsDKAQ gGaUCp k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <div
      className="sc-crHmcD lfvliB k-Form-PasswordInput"
    >
      <input
        className="sc-eCImPb elHtIJ k-Form-TextInput k-Form-PasswordInput__input k-Form-TextInput--medium"
        disabled={false}
        id="input"
        name="field"
        placeholder="Placeholder…"
        type="password"
      />
      <button
        aria-label="Show password"
        aria-pressed={false}
        className="k-Form-PasswordInput__icon k-u-reset-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          fill="#222"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </button>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioButtonSet /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <fieldset
      className="sc-kDTinF cpxjqd k-Form-RadioButtonSet k-Form-RadioButtonSet--orion"
      disabled={false}
    >
      <div
        className="k-Form-RadioButtonSet__radioContainer"
      >
        <div
          className="sc-jrQzAO gGOKwG k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--orion k-Form-RadioButton--disc k-Form-RadioButton--medium k-Form-RadioButton__labelText--regular"
        >
          <input
            className="k-Form-RadioButton__input"
            defaultChecked={true}
            disabled={false}
            id="option-a"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-a"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option A
            </span>
          </label>
        </div>
        <div
          className="sc-jrQzAO gGOKwG k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--orion k-Form-RadioButton--disc k-Form-RadioButton--medium k-Form-RadioButton__labelText--regular"
        >
          <input
            className="k-Form-RadioButton__input"
            disabled={false}
            id="option-b"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-b"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option B
            </span>
          </label>
        </div>
        <div
          className="sc-jrQzAO gGOKwG k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--orion k-Form-RadioButton--disc k-Form-RadioButton--medium k-Form-RadioButton__labelText--regular"
        >
          <input
            className="k-Form-RadioButton__input"
            disabled={false}
            id="option-c"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-c"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option C
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioSet /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKwDye kYrfwi k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bdvvtL ikmzYA k-Label k-Label--small"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <fieldset
      className="sc-pVTFL jPxVOQ k-Form-RadioSet"
      disabled={false}
    >
      <div
        className="k-Form-RadioSet__radioContainer"
      >
        <div
          className="sc-furwcr bNYJax k-Form-Radio k-Form-RadioSet__radio k-Form-Radio--disc"
        >
          <input
            className="k-Form-Radio__input"
            defaultChecked={true}
            disabled={false}
            id="option-a"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-Radio__label"
            htmlFor="option-a"
          >
            <span
              className="k-Form-Radio__labelText k-Form-Radio__labelText--normal"
            >
              Option A
            </span>
          </label>
        </div>
        <div
          className="sc-furwcr bNYJax k-Form-Radio k-Form-RadioSet__radio k-Form-Radio--disc"
        >
          <input
            className="k-Form-Radio__input"
            disabled={false}
            id="option-b"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-Radio__label"
            htmlFor="option-b"
          >
            <span
              className="k-Form-Radio__labelText k-Form-Radio__labelText--normal"
            >
              Option B
            </span>
          </label>
        </div>
        <div
          className="sc-furwcr bNYJax k-Form-Radio k-Form-RadioSet__radio k-Form-Radio--disc"
        >
          <input
            className="k-Form-Radio__input"
            disabled={false}
            id="option-c"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-Radio__label"
            htmlFor="option-c"
          >
            <span
              className="k-Form-Radio__labelText k-Form-Radio__labelText--normal"
            >
              Option C
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;
